@@ -1,7 +1,7 @@
 # $Id: Makefile.am,v 1.3 2012-06-11 17:54:27 karl Exp $
 # Makefile.am for texinfo/install-info.
 #
-# Copyright 2008, 2009, 2010 Free Software Foundation, Inc.
+# Copyright 2008, 2009, 2010, 2012, 2013 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -13,6 +13,11 @@
 
 SUBDIRS = tests
 bin_PROGRAMS = ginstall-info
+
+w32_script = ginstall-info.exe.manifest
+if HOST_IS_WINDOWS
+ dist_bin_SCRIPTS = $(w32_script)
+endif
 
 # Use `ginstall-info' in the definition of PROGRAMS and in dependencies
 # because automake generates an install-info target in every Makefile
